--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -36,6 +36,6 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   registry-url: "https://registry.npmjs.org"
-            - run: npm publish
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+            # - run: npm publish
+            #   env:
+            #       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
