--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -35,7 +35,7 @@ jobs:
             - run: mkdir dist
             - run: ls -a
             - run: cd dist
-            - run: ls ../addons -a
+            - run: ls ../ -a
             - run: echo "{\"name\":\"@sa-community/addons-data\",\"version\":\"$VERSION\",\"description\":Scratch Addons\" addons data\",\"homepage\":\"https://github.com/scratchaddons-community\",\"repository\":\"git+https://github.com/scratchaddons-community/addons-data-script\",\"license\":\"GPLv3\",\"maintainers\":[\"RedGuy12\"],\"main\":\"addons.json\"}" > package.json
             # Get addons
             - run: echo [ > addons.json
