--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,19 +33,16 @@ jobs:
             - run: git checkout $VERSION
             # Get package
             - run: mkdir dist
-            - run: ls -a
-            - run: cd dist
-            - run: ls ../ -a
             - run: echo "{\"name\":\"@sa-community/addons-data\",\"version\":\"$VERSION\",\"description\":Scratch Addons\" addons data\",\"homepage\":\"https://github.com/scratchaddons-community\",\"repository\":\"git+https://github.com/scratchaddons-community/addons-data-script\",\"license\":\"GPLv3\",\"maintainers\":[\"RedGuy12\"],\"main\":\"addons.json\"}" > package.json
             # Get addons
-            - run: echo [ > addons.json
-            - run: addons = `jq -r '.[]' ../addons/addons.json`
+            - run: echo [ > dist/addons.json
+            - run: addons = `jq -r '.[]' addons/addons.json`
             - run: |
                   for addon in "${addons[@]}"; do
-                    cat "../addons/$addon/addon.json" >> addons.json
-                    echo , >> addons.json
+                    cat "addons/$addon/addon.json" >> dist/addons.json
+                    echo , >> dist/addons.json
                   done
-            - run: echo ] >> addons.json
+            - run: echo ] >> dist/addons.json
             # Publish
             - uses: actions/setup-node@v3
               with:
