--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,11 +32,14 @@ jobs:
                   LATEST: $(git rev-list --tags --timestamp --no-walk | sort -nr | head -n1 | cut -f 2 -d ' ')
             - run: git checkout $VERSION
             # Get package
+            - run: ls -a
+            - run: ls .. -a
             - run: mkdir ./dist
-            - run: echo "{\"name\":\"@sa-community/addons-data\",\"version\":\"$VERSION\",\"description\":Scratch Addons\" addons data\",\"homepage\":\"https://github.com/scratchaddons-community\",\"repository\":\"git+https://github.com/scratchaddons-community/addons-data-script\",\"license\":\"GPLv3\",\"maintainers\":[\"RedGuy12\"],\"main\":\"addons.json\"}" > ./package.json
+            - run: echo "{\"name\":\"@sa-community/addons-data\",\"version\":\"$VERSION\",\"description\":Scratch Addons\" addons data\",\"homepage\":\"https://github.com/scratchaddons-community\",\"repository\":\"git+https://github.com/scratchaddons-community/addons-data-script\",\"license\":\"GPLv3\",\"maintainers\":[\"RedGuy12\"],\"main\":\"addons.json\"}" > ./dist/package.json
             # Get addons
             - run: echo [ > ./dist/addons.json
             - run: ls -a
+            - run: ls .. -a
             - run: addons = $(jq -r '.[]' ./addons/addons.json)
             - run: |
                   for addon in "${addons[@]}"; do
