--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -40,9 +40,10 @@ jobs:
             - run: echo [ > dist/addons.json
             - run: ls -a
             - run: ls .. -a
-            - run: addons=$(jq -r ".[]" "addons/addons.json")
+            - run: addons=($(jq -r .[] addons/addons.json))
             - run: |
                   for addon in "${addons[@]}"; do
+                    [[ "$addon" == "//"* ]] && continue
                     cat "addons/$addon/addon.json" >> dist/addons.json
                     echo , >> dist/addons.json
                   done
