--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,29 +25,18 @@ jobs:
                       addons/addons.json
                   sparse-checkout-cone-mode: false
                   fetch-tags: true
-            - run: ls -a
             # Checkout
             - run: echo "VERSION=${{ inputs.Version || env.LATEST }}" >> $GITHUB_ENV
               env:
                   LATEST: $(git rev-list --tags --timestamp --no-walk | sort -nr | head -n1 | cut -f 2 -d " ")
             - run: git checkout $VERSION
+            - run: echo $VERSION
             # Get package
-            - run: ls -a
-            - run: ls .. -a
             - run: mkdir dist
             - run: echo "{\"name\":\"@sa-community/addons-data\",\"version\":\"$VERSION\",\"description\":Scratch Addons\" addons data\",\"homepage\":\"https://github.com/scratchaddons-community\",\"repository\":\"git+https://github.com/scratchaddons-community/addons-data-script\",\"license\":\"GPLv3\",\"maintainers\":[\"RedGuy12\"],\"main\":\"addons.json\"}" > dist/package.json
             # Get addons
-            - run: echo [ > dist/addons.json
-            - run: ls -a
-            - run: ls .. -a
             - run: |
-                  while IFS= read -r addon; do
-                    [[ "$addon" == "//"* ]] && continue
-                    cat "addons/$(echo "$addon" | tr -d '\r')/addon.json" >> dist/addons.json
-                    echo , >> dist/addons.json
-                  done < <(jq -r ".[]" addons/addons.json)
-            - run: echo ] >> dist/addons.json
-            - run: cat dist/addons.json
+                  jq -c 'map(select(startswith("//") | not) | {addon: ., content: (try input catch null)})' addons.json $(jq -r 'map(select(startswith("//") | not) | . + ".json") | join(" ")' addons.json)
             # Publish
             - uses: actions/setup-node@v3
               with:
