--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,7 @@ jobs:
                   fetch-tags: true
                   fetch-depth: 0
             # Checkout
-            - run: echo "VERSION=${{ inputs.Version || '$(git describe)' }}" >> $GITHUB_ENV
+            - run: VERSION=${{ inputs.Version || '$(git describe)' }}
             - run: git checkout ${{ env.VERSION }}
             # Get package
             - run: mkdir dist
