--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,13 +22,13 @@ jobs:
             - uses: actions/checkout@v4.1.0
               with:
                   repository: ScratchAddons/ScratchAddons
-                  sparse-checkout: |
-                      addons/*/addon.json
-                      addons/addons.json
-                  sparse-checkout-cone-mode: false
-                  fetch-tags: true
+                #   sparse-checkout: |
+                #       addons/*/addon.json
+                #       addons/addons.json
+                #   sparse-checkout-cone-mode: false
+                #   fetch-tags: true
                   fetch-depth: 0
-                  ref: refs/tags/*
+            - run: git fetch --tags
             # Checkout
             - run: VERSION=${{ inputs.Version || '$(git describe --tags $(git rev-list --tags --max-count=1))' }}
             - run: git checkout ${{ env.VERSION || '$VERSION' }}
