--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,16 +22,13 @@ jobs:
             - uses: actions/checkout@v4.1.0
               with:
                   repository: ScratchAddons/ScratchAddons
-                  #   sparse-checkout: |
-                  #       addons/*/addon.json
-                  #       addons/addons.json
-                  #   sparse-checkout-cone-mode: false
-                  #   fetch-tags: true
+                  sparse-checkout: |
+                      addons/*/addon.json
+                      addons/addons.json
+                  sparse-checkout-cone-mode: false
+                  fetch-tags: true
                   fetch-depth: 0
-            - run: git fetch --tags
             # Get the latest tag
-            - run: git ls-remote --tags origin
-            - run: git tag -l
             - run: |
                   TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
                   echo "Latest tag: $TAG"
