--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,8 +25,8 @@ jobs:
                   sparse-checkout: |
                       addons/*/addon.json
                       addons/addons.json
-                  sparse-checkout-cone-mode: false
                   fetch-tags: true
+                  fetch-depth: 0
             # Checkout
             - run: echo "VERSION=${{ inputs.Version || '$(git describe --tags $(git rev-list --tags --max-count=1))' }}" >> "$GITHUB_ENV"
             - run: git checkout "$VERSION"
