--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -41,7 +41,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   registry-url: "https://registry.npmjs.org"
-            # - run: npm publish
-            #   working-directory: dist
-            #   env:
-            #       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+            - run: npm publish
+              working-directory: dist
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
