--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,6 +25,8 @@ jobs:
                   sparse-checkout: |
                       addons/*/addon.json
                       addons/addons.json
+                      LICENSE
+                      manifest.json
                   sparse-checkout-cone-mode: false
                   fetch-tags: true
                   fetch-depth: 0
