--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -38,7 +38,7 @@ jobs:
                   registry-url: "https://registry.npmjs.org"
             - id: check_version
               run: |
-                  if [ $VERSION == "v$(npm view @sa-community/addons-data version)" ]; then
+                  if [ $VERSION == "v$(npm view @sa-community/addons-data version)-0" ]; then
                       echo "No new version"
                       echo "stop_workflow=true" >> "$GITHUB_OUTPUT"
                   else
@@ -55,7 +55,7 @@ jobs:
             - if: steps.check_version.outputs.stop_workflow == 'false'
               run: cp manifest.json dist/manifest.json
             - if: steps.check_version.outputs.stop_workflow == 'false'
-              run: echo $(cat dist/package.json | sed "s/VERSION/$(echo $VERSION | sed 's/v//')/") > dist/package.json
+              run: echo $(cat dist/package.json | sed "s/VERSION/$(echo $VERSION | sed 's/v//')-0/") > dist/package.json
             # Get addons
             - if: steps.check_version.outputs.stop_workflow == 'false'
               run: |
